force-app/main/default/objects/custom_create194__c/custom_create194__c.object-meta.xml
<CustomObject>
    <label>Custom created object194</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects194</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>