force-app/main/default/objects/custom_create194__c/fields/custom_create_194field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_194field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 194field525</label>
    <type>Checkbox</type>
</CustomField>